# solana-core

core-1/: README.md
core-1/solana-intro-client/src/: index.ts
core-1/solana-movie-frontend/components/: Form.tsx  MovieList.tsx
core-1/solana-movie-frontend/models/: Movie.ts
core-1/solana-ping-frontend/: package-lock.json
core-1/solana-ping-frontend/components/: AppBar.tsx  PingButton.tsx
core-1/solana-ping-frontend/pages/: index.tsx
core-1/solana-send-sol-frontend/: package.json
core-1/solana-send-sol-frontend/components/: SendSolForm.tsx
core-1/solana-send-sol-frontend/pages/: _app.tsx  index.tsx
core-1/solana-student-intros-frontend/components/: Form.tsx  StudentIntroList.tsx
core-1/solana-student-intros-frontend/models/: StudentIntro.ts
core-1/solana-student-intros-frontend/pages/: index.tsx
core-2/2077/src/: index.ts
core-2/candy-machine-ui/: .gitignore
core-2/cargocoin/: package-lock.json  package.json
core-2/cargocoin/src/: index.ts  initializeKeypair.ts
core-2/crabs/: cache.json  config.json
core-2/pizzacoin/: package.json
core-2/pizzacoin/src/: index.ts
core-2/solana-token-client/: package.json
core-3/movie_review/: Cargo.toml
core-3/movie_review/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
core-3/solana-movie-client/src/: index.ts
core-3/solana-movie-frontend/components/: AppBar.tsx  Form.tsx  MovieList.tsx  WalletContextProvider.tsx
core-3/solana-movie-frontend/pages/: index.tsx
core-3/solana-student-intro/: package.json
core-3/student_intro/: Cargo.toml
projects/buildoor/: package.json
(+16 files in other folders)
